--- a/dockereve-master/nginx/nginx.conf
+++ b/dockereve-master/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/error.log info;
 pid        /var/run/nginx.pid;
 
 
@@ -13,7 +13,6 @@ http {
     server {
         listen 80;
         listen [::]:80 ;
-        server_name localhost;
 
         location = /docs/api {
             proxy_pass http://eve:5000/docs/api;
