--- a/dockereve-master/.env
+++ b/dockereve-master/.env
@@ -1,6 +1,5 @@
 MONGODB_HOST=mongodb
 MONGODB_PORT=27017
-
-API_TOKEN="testing_secret"
-API_URL=http://localhost/docs/api
-MINDR_CFG_PATH=debug.cfg
+API_TOKEN=NnrP65CXaSnZ0aLPZ8Ox64d0pDlSKS0R8wpymwLr
+API_URL=/docs/api
+MINDR_CFG_PATH=prod.cfg
