--- a/dockereve-master/docker-compose_pre_cert_bot.yml
+++ b/dockereve-master/docker-compose_pre_cert_bot.yml
@@ -7,11 +7,10 @@ nginx:
     volumes:
         - /home/mindr/medulina:/www/static:ro
         - ./uwsgi_params.par:/etc/nginx/uwsgi_params.par:ro
-        - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+        - ./nginx/nginx_pre_cert_bot.conf:/etc/nginx/nginx.conf:ro
         - ./nginx/.ssl:/etc/ssl/certs/
         - /home/mindr/certs:/etc/letsencrypt
         - /home/mindr/certs-data:/data/letsencrypt
-        - /home/mindr/logs/nginx:/var/dockerlog
     volumes_from:
         - eve
     links:
@@ -32,7 +31,7 @@ eve:
         - 5000
     volumes:
         - ./eve-app:/usr/src/app
-        - ./nginx/nginx.conf:/usr/src/app/nginx.conf
+        - ./nginx/nginx_pre_cert_bot.conf:/usr/src/app/nginx.conf
         - /usr/src/app/static
     links:
         - mongodb
