--- a/dockereve-master/docker-compose_test.yml
+++ b/dockereve-master/docker-compose_test.yml
@@ -7,7 +7,7 @@ nginx:
     volumes:
         - /home/mindr/medulina:/www/static:ro
         - ./uwsgi_params.par:/etc/nginx/uwsgi_params.par:ro
-        - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+        - ./nginx/nginx_test.conf:/etc/nginx/nginx.conf:ro
         - ./nginx/.ssl:/etc/ssl/certs/
         - /home/mindr/certs:/etc/letsencrypt
         - /home/mindr/certs-data:/data/letsencrypt
@@ -32,7 +32,7 @@ eve:
         - 5000
     volumes:
         - ./eve-app:/usr/src/app
-        - ./nginx/nginx.conf:/usr/src/app/nginx.conf
+        - ./nginx/nginx_test.conf:/usr/src/app/nginx.conf
         - /usr/src/app/static
     links:
         - mongodb
