[ENH] Https for prod

--- a/dockereve-master/nginx/nginx_pre_cert_bot_test.conf
+++ b/dockereve-master/nginx/nginx_pre_cert_bot_test.conf
@@ -13,23 +13,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name medulina.com www.medulina.com;
-        
-        root /www/static;
-        location / {
-            index landing.html;
-            include /etc/nginx/mime.types;
-        }
-
-        location /.well-known {
-        allow all;
-        root  /data/letsencrypt/;
-        }
-    }
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name *.medulina.com;
+        server_name test.medulina.com;
         
         root /www/static;
         location / {
@@ -45,7 +29,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name api.medulina.com;
+        server_name testapi.medulina.com;
 
         location = /docs/api {
             proxy_pass http://eve:5000/docs/api;
@@ -76,4 +60,5 @@ http {
         #return 301 https://$host$request_uri;
     }
 }
+
     
