--- a/dockereve-master/nginx/nginx.conf
+++ b/dockereve-master/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  /var/error.log info;
+error_log  /var/dockerlog/error.log info;
 pid        /var/run/nginx.pid;
 
 
@@ -13,6 +13,117 @@ http {
     server {
         listen 80;
         listen [::]:80 ;
+        server_name medulina.com *.medulina.com;
+
+        # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
+        return 302 https://$host$request_uri;
+    }
+
+
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name medulina.com www.medulina.com;
+        
+        ssl                       on;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+
+        ssl_session_cache         shared:SSL:20m;
+        ssl_session_tickets off;
+        ssl_session_timeout       10m;
+
+        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers               "ECDH+AESGCM:ECDH+AES256:ECDH+AES128:ECDH+3DES:RSA+AES:RSA+3DES:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!ADH:!AECDH:!MD5:!DSS:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA";
+
+        ssl_stapling              on;
+        ssl_stapling_verify       on;
+        resolver                  8.8.8.8 8.8.4.4;
+
+        ssl_certificate           /etc/letsencrypt/live/medulina.com/fullchain.pem;
+        ssl_certificate_key       /etc/letsencrypt/live/medulina.com/privkey.pem;
+        ssl_trusted_certificate   /etc/letsencrypt/live/medulina.com/chain.pem;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+
+        root /www/static;
+        location / {
+            index landing.html;
+            include /etc/nginx/mime.types;
+        }
+    }
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name *.medulina.com;
+        
+        ssl                       on;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+
+        ssl_session_cache         shared:SSL:20m;
+        ssl_session_tickets off;
+        ssl_session_timeout       10m;
+
+        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers               "ECDH+AESGCM:ECDH+AES256:ECDH+AES128:ECDH+3DES:RSA+AES:RSA+3DES:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!ADH:!AECDH:!MD5:!DSS:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA";
+
+        ssl_stapling              on;
+        ssl_stapling_verify       on;
+        resolver                  8.8.8.8 8.8.4.4;
+
+        ssl_certificate           /etc/letsencrypt/live/medulina.com/fullchain.pem;
+        ssl_certificate_key       /etc/letsencrypt/live/medulina.com/privkey.pem;
+        ssl_trusted_certificate   /etc/letsencrypt/live/medulina.com/chain.pem;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+
+        root /www/static;
+        location / {
+            index index.html;
+            include /etc/nginx/mime.types;
+        }
+    }
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name api.medulina.com;
+
+        ssl                       on;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+
+        ssl_session_cache         shared:SSL:20m;
+        ssl_session_tickets off;
+        ssl_session_timeout       10m;
+
+        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers               "ECDH+AESGCM:ECDH+AES256:ECDH+AES128:ECDH+3DES:RSA+AES:RSA+3DES:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!ADH:!AECDH:!MD5:!DSS:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA";
+
+        ssl_stapling              on;
+        ssl_stapling_verify       on;
+        resolver                  8.8.8.8 8.8.4.4;
+
+        ssl_certificate           /etc/letsencrypt/live/medulina.com/fullchain.pem;
+        ssl_certificate_key       /etc/letsencrypt/live/medulina.com/privkey.pem;
+        ssl_trusted_certificate   /etc/letsencrypt/live/medulina.com/chain.pem;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
 
         location = /docs/api {
             proxy_pass http://eve:5000/docs/api;
