add tutorial endpoint

--- a/dockereve-master/nginx/nginx.conf
+++ b/dockereve-master/nginx/nginx.conf
@@ -56,6 +56,11 @@ http {
             index landing.html;
             include /etc/nginx/mime.types;
         }
+        location /meningioma{
+            alias /www/meningioma;
+            index index.html;
+            include /etc/nginx/mime.types;
+        }
     }
     server {
         listen 443 ssl http2;
@@ -93,6 +98,7 @@ http {
             index index.html;
             include /etc/nginx/mime.types;
         }
+
     }
     server {
         listen 443 ssl http2;
