--- a/dockereve-master/docker-compose.yml
+++ b/dockereve-master/docker-compose.yml
@@ -6,6 +6,7 @@ nginx:
         - 443:443
     volumes:
         - /home/mindr/medulina:/www/static:ro
+        - /home/mindr/meningioma:/www/meningioma:ro
         - ./uwsgi_params.par:/etc/nginx/uwsgi_params.par:ro
         - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
         - ./nginx/.ssl:/etc/ssl/certs/
