[ADD] letsencrpyt endpoints

--- a/dockereve-master/nginx/nginx.conf
+++ b/dockereve-master/nginx/nginx.conf
@@ -61,6 +61,11 @@ http {
             index index.html;
             include /etc/nginx/mime.types;
         }
+
+        location /.well-known {
+            allow all;
+            root  /data/letsencrypt/;
+        }
     }
     server {
         listen 443 ssl http2;
@@ -97,6 +102,11 @@ http {
         location / {
             index index.html;
             include /etc/nginx/mime.types;
+        }
+
+        location /.well-known {
+            allow all;
+            root  /data/letsencrypt/;
         }
 
     }
@@ -146,6 +156,11 @@ http {
             client_max_body_size 50M;
         }
         
+        location /.well-known {
+            allow all;
+            root  /data/letsencrypt/;
+        }
+
         location / {
             proxy_pass http://swagger_ui:8080/;
             proxy_set_header Host $host;
