--- a/dockereve-master/eve-app/debug.cfg
+++ b/dockereve-master/eve-app/debug.cfg
@@ -1,5 +1,7 @@
 GITHUB_CLIENT_ID = '8e67ca1b79f9e086562f'
 GITHUB_CLIENT_SECRET = '59c85ab39d065eb47962ed7ff2e7919a0cf64e74'
+TESTGITHUBLOCAL_CLIENT_ID = 'a9e24f16d933331af1c2'
+TESTGITHUBLOCAL_CLIENT_SECRET = '643371d1c99d4ce9e345f6fe058f6e74418dd1fc'
 GITHUB_ACCESS_TOKEN_URL = 'https://github.com/login/oauth/access_token'
 GITHUB_USER_URL = 'https://api.github.com/user'
 ROLL_N = 10
